sample/retrieveUnpackaged/objects/Event_Action__c.object
<CustomObject>
    <fields>
        <fullName>Alternative_Water_Supply__c</fullName>
        <label>Alternative Water Supply</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chatter_Post_Id__c</fullName>
        <label>Chatter Post Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hidden_Action_unpublished__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden flag to prevent chatter comment triggers from running twice because of workflow</description>
        <label>(Hidden)Action unpublished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_Published_to_Facebook_Flag__c</fullName>
        <label>(Hidden)Published to Facebook Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hidden_Published_to_IVR_Flag__c</fullName>
        <label>(Hidden)Published to IVR Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hidden_Published_to_Internet_Flag__c</fullName>
        <label>(Hidden)Published to Internet Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hidden_Published_to_Twitter_Flag__c</fullName>
        <label>(Hidden)Published to Twitter Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IF( ISPICKVAL(Public_Type__c, &apos;Discoloured Water&apos;), IMAGE(&quot;/resource/1399007512000/IconDiscolouredWaterSmall&quot;, &quot;checked&quot;),
IF( ISPICKVAL(Public_Type__c, &apos;Scheduled Works&apos;),IMAGE(&quot;/resource/1398993200000/IconScheduledWorksSmall&quot;, &quot;checked&quot;),
IF( ISPICKVAL(Public_Type__c , &apos;Emergency Works&apos;),IMAGE(&quot;/resource/1398993178000/IconEmergencyWorkSmall&quot;, &quot;checked&quot;),&apos;&apos;))

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>The message in plain text.</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Public_Type__c</fullName>
        <label>Public Type</label>
        <picklist>
            <picklistValues>
                <fullName>Emergency works</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled works</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Publish_status__c</fullName>
        <label>Publish status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Published_to_Facebook_Flag__c</fullName>
        <formula>IF( RecordType.DeveloperName = &apos;Facebook&apos; &amp;&amp; TEXT(Publish_status__c) = &apos;Published&apos; , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Published to Facebook Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Published_to_IVR_Flag__c</fullName>
        <formula>IF( RecordType.DeveloperName = &apos;IVR&apos; &amp;&amp; TEXT(Publish_status__c) = &apos;Published&apos; , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Published to IVR Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Published_to_Internet_Flag__c</fullName>
        <formula>IF( RecordType.DeveloperName  = &apos;Internet&apos; &amp;&amp;  TEXT(Publish_status__c) = &apos;Published&apos; , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Published to Internet Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Published_to_Twitter_Flag__c</fullName>
        <formula>IF( RecordType.DeveloperName = &apos;Twitter&apos; &amp;&amp; TEXT(Publish_status__c) = &apos;Published&apos; , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Published to Twitter Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Rich_Text_Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SEW_Event__c</fullName>
        <label>SEW Event</label>
        <referenceTo>SEW_Event__c</referenceTo>
        <relationshipLabel>Event Actions</relationshipLabel>
        <relationshipName>Event_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source_System_Stat__c</fullName>
        <label>Source System Stat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Event Action</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>Publish_status__c</columns>
        <columns>SEW_Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Pending_Approval</fullName>
        <columns>NAME</columns>
        <columns>Publish_status__c</columns>
        <columns>SEW_Event__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publish_status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <label>Pending Approval</label>
    </listViews>
    <nameField>
        <displayFormat>EA-{000000}</displayFormat>
        <label>Event Action Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Actions</pluralLabel>
    <recordTypes>
        <fullName>Facebook</fullName>
        <active>true</active>
        <label>Facebook</label>
    </recordTypes>
    <recordTypes>
        <fullName>IVR</fullName>
        <active>true</active>
        <label>IVR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internet</fullName>
        <active>true</active>
        <label>Internet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Twitter</fullName>
        <active>true</active>
        <label>Twitter</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Message_cannot_be_blank</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Message__c)</errorConditionFormula>
        <errorDisplayField>Message__c</errorDisplayField>
        <errorMessage>Message cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Parent_event_is_completed</fullName>
        <active>false</active>
        <errorConditionFormula>TEXT(SEW_Event__r.Public_Status__c)  = &apos;Resolved&apos;</errorConditionFormula>
        <errorMessage>Cannot create/edit action because Event is already completed</errorMessage>
    </validationRules>
</CustomObject>